# FNA3D_HLSL_Test

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_linux.sh
assets/effects/: alpha_test.feb  alpha_test.feb.json  basic_effect.feb  basic_effect.feb.json  diffuse.feb  diffuse.feb.json  dual_texture.feb  dual_texture.feb.json  env_map.feb  env_map.feb.json  gbuffer.feb  gbuffer.feb.json  matviz.feb  matviz.feb.json  normal.feb  normal.feb.json  pbr.feb  pbr.feb.json  shadow_depth.feb  shadow_depth.feb.json  shadow_scene.feb  shadow_scene.feb.json  shadow_viz.feb  shadow_viz.feb.json  skinned.feb  skinned.feb.json  sprite.feb  sprite.feb.json  ssao.feb  ssao.feb.json  triangle.feb  triangle.feb.json  yuv_to_rgba.feb  yuv_to_rgba.feb.json
assets/models/: teapot_bezier0.tris
assets/shaders/: alpha_test_ps.hlsl  alpha_test_vs.hlsl  basic_effect_ps.hlsl  basic_effect_vs.hlsl  diffuse_ps.hlsl  diffuse_vs.hlsl  dual_texture_ps.hlsl  dual_texture_vs.hlsl  env_map_ps.hlsl  env_map_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  matviz_ps.hlsl  matviz_vs.hlsl  normal_ps.hlsl  normal_vs.hlsl  pbr_ps.hlsl  pbr_vs.hlsl  shadow_depth_ps.hlsl  shadow_depth_vs.hlsl  shadow_scene_ps.hlsl  shadow_scene_vs.hlsl  shadow_viz_ps.hlsl  skinned_ps.hlsl  skinned_vs.hlsl  sprite_ps.hlsl  sprite_vs.hlsl  ssao_ps.hlsl  ssao_vs.hlsl  triangle_vs.hlsl  yuv_to_rgba_ps.hlsl  yuv_to_rgba_vs.hlsl
docs/: hlsl_shader_authoring_guide.md  imguizmo_integration.md  matrix-conventions.md  ndc-coordinate-systems.md  sdl_gpu_uniform_binding.md
src/: alpha_test.c  basic_effect_test.c  common.c  common.h  dual_texture_test.c  env_map_test.c  math3d.c  math3d.h  matviz_test.c  shadow_test.c  skinned_test.c  ssao_test.c  teapot.c  teapot_light.c  teapot_pbr.c  textured_quad.c  triangle_test.c  yuv_to_rgba_test.c
tools/: feb_builder.py  feb_dump.py
